profilelist1exp/unpackaged/objects/MonitorLoginHistory__c.object
<CustomObject>
    <description>LoginHistory custom object. Retrieve data from LoginHistory</description>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Browser__c</fullName>
        <label>Browser</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginHistoryId__c</fullName>
        <label>Login History Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginTime__c</fullName>
        <label>Login Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoginType__c</fullName>
        <label>Login Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginURL__c</fullName>
        <label>Login URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceIP__c</fullName>
        <label>SourceIP</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MonitorLoginHistory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MonitorLoginHistory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UserId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LoginTime__c</columns>
        <columns>LoginURL__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MonitorLoginHistory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MonitorLoginHistory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>